using the bash script instead invoking java directly. some keys were changed...